Fix icons appearing too small by switching to Nerd Font Propo

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,5 +1,5 @@
 * {
-  font-family: "Poppins";
+  font-family: "MesloLGM Nerd Font Propo";
   font-size: 1rem;
   min-height: 0;
   min-width: 0;
